# ticketingsystem

backend/: .gitignore  README.md  babel.cfg  main.py  messages.pot  middleware.py  pyproject.toml  requirements.txt  run.sh
backend/api/: routes.py
backend/api/v1/: auth.py  notification_routes.py  ticket.py  user.py
backend/api/v1/clients/: client.py  contract.py
backend/api/v1/permissions/: permission.py  permission_category.py  user_permission.py
backend/api/v1/roles/: role.py  user_roles.py
backend/db/: db.py
backend/db/models/: __init__.py  log.py  notifications.py  permission.py  role.py  ticket.py  user.py
backend/db/models/clients/: client.py  contract.py
backend/db/schemas/: notifications.py  permission.py  role.py  ticket.py  user.py
backend/db/schemas/clients/: client.py  contract.py
backend/i18n/: language_middleware.py  translator.py
backend/i18n/locales/en/LC_MESSAGES/: messages.mo  (+1 more)
backend/logging_system/: app_logger.py  base.py  betterstack_logger.py  db_log_handler.py  log_helper.py  logging_filter.py
backend/notifications/: dispatcher.py
backend/notifications/channels/: base_channel.py  email_channel.py  inapp_channel.py  sms_channel.py
backend/notifications/providers/: email.py
backend/notifications/strategies/: base_strategy.py  direct_strategy.py  multiple_strategy.py
backend/repositories/: auth.py
backend/templates/: notification_template.html  ticket_confirmation.html  user_registration.html  verification.html
backend/utils/: cloudinary_config.py  email.py  initialize.py  logging_config.py  settings.py
(+50 files in other folders)
